Fix text alignment of hero headers

--- a/styles.css
+++ b/styles.css
@@ -358,6 +358,7 @@ footer {
 	font-weight: 800;
 	padding-top: 35vh;
 	font-size: 7vw;
+	line-height: 10vh;
 	color: #FFFFFF;
 	mix-blend-mode: exclusion;
 	background: rgba(255,255,255,0.05);
